Fix Logout Button (#110)
Previously, the navbar was not aligning properly on devices like the Galaxy Fold.
- Adjusts the left padding of the navbar for small screens.
- Modifies margin settings for the logout button.

--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,18 @@
   --red: #E50914;
   --darkred: #831010;
   --lightgrey: #f2f2f2;
-	--font-family: "Helvetica Neue", helvetica, arial, sans-serif;
+  --font-family: "Helvetica Neue", helvetica, arial, sans-serif;
 }
 
 #root {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 body {
-  background-color: var(--black); 
+  background-color: var(--black);
   margin: 0;
   padding: 0;
 }
@@ -25,12 +25,12 @@ h2 {
   color: var(--red);
   margin-top: 1rem;
   margin-bottom: 1rem;
-	padding: 1em;
+  padding: 1em;
   font-size: 30px;
 }
 
 p {
-  color: var(--darkred); 
+  color: var(--darkred);
   margin-bottom: 1rem;
 }
 
@@ -50,8 +50,8 @@ p {
 .navbar a {
   text-decoration: none;
   color: var(--white);
-	font-size: 30px;
-	font-family: var(--font-family);
+  font-size: 30px;
+  font-family: var(--font-family);
 
   &:hover {
     color: var(--red);
@@ -65,33 +65,34 @@ p {
   color: var(--white);
   padding: 5px 15px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 15px;
   border-radius: 4px;
-  margin-left: auto; 
+  margin-left: auto;
 
-	&:hover {
-		background-color: var(--darkred);
-	}
+  &:hover {
+    background-color: var(--darkred);
+  }
 }
 
-@media screen and (width <= 880px) { 
-	.navbar {
-		padding-left: 2em;
-	}
-	
-	.nav-links {
-		gap: 2em;
-	}
+@media screen and (width <=880px) {
+  .navbar {
+    padding: 1em 2em;
+    margin-left: -30.5px;
+  }
 
-	.logout-btn {
-		margin-left: 40px; 
-	}
+  .nav-links {
+    gap: 2em;
+  }
 
-	.navbar a {
-		font-size: 15px;
-	
-		&:hover {
-			font-size: 20px;
-		}
-	}
+  .logout-btn {
+    margin-left: 1rem;
+  }
+
+  .navbar a {
+    font-size: 15px;
+
+    &:hover {
+      font-size: 16px;
+    }
+  }
 }
